--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview",
     "serve": "vite preview --host",
     "clean": "rm -rf dist",
-    "lint": "echo 'No linting configured yet'"
+    "lint": "echo 'No linting configured yet'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:accessibility": "jest --testPathPattern=accessibility",
+    "test:performance": "lighthouse http://localhost:3000 --output=json --output-path=./reports/lighthouse.json",
+    "test:all": "npm run test && npm run test:e2e && npm run test:accessibility"
   },
   "repository": {
     "type": "git",
@@ -31,6 +39,16 @@
   },
   "homepage": "https://properties4creations.com",
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
+    "axe-core": "^4.11.0",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lighthouse": "^13.0.1",
+    "playwright": "^1.57.0",
     "vite": "^7.3.0"
   },
   "engines": {
