--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
-    "name": "Properties 4 Creations",
-    "short_name": "P4C",
-    "description": "Affordable housing for veterans and families in East Texas. Veteran-owned, Section 8 & HUD-VASH approved.",
-    "start_url": "/",
-    "display": "browser",
-    "background_color": "#0B1120",
-    "theme_color": "#C28E5A",
-    "lang": "en-US",
-    "icons": [
-        {
-            "src": "/images/logo/brand-logo.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/images/logo/brand-logo.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Properties 4 Creations",
+  "short_name": "P4C",
+  "description": "Affordable housing for veterans and families in East Texas",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#0b1120",
+  "icons": [
+    {
+      "src": "/images/logo/brand-logo.svg",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo/brand-logo.svg",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "categories": ["business", "housing", "real-estate"],
+  "lang": "en-US",
+  "dir": "ltr"
 }
