--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "test:coverage": "jest --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:accessibility": "jest --testPathPattern=accessibility",
-    "test:performance": "lighthouse http://localhost:3000 --output=json --output-path=./reports/lighthouse.json",
-    "test:all": "npm run test && npm run test:e2e && npm run test:accessibility"
+    "test:accessibility": "playwright test tests/e2e/accessibility.spec.js",
+    "test:performance": "playwright test tests/e2e/performance.spec.js",
+    "test:all": "npm run test && npm run test:e2e && npm run test:accessibility && npm run test:performance",
+    "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:accessibility && npm run test:performance",
+    "quality:check": "npm run lint && npm run test:coverage && npm run test:e2e && npm run test:accessibility",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:check": "npm run security:audit",
+    "build:verify": "npm run build && npm run preview",
+    "precommit": "npm run quality:check",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
